2002-03-01    <johan@FRIJA>

	* src/SDCCglue.c (printIvalPtr): fixed bug #524211

	* src/SDCCast.c (decorateType): fixed bug #524209

	* src/SDCCval.c (valNot): fixed bug #524195

2002-02-26    <johan@balder>

	* src/xa51/gen.c: fixed a warning

	* src/SDCCglue.c (printIvalFuncPtr): fixed bug #522534

	* src/SDCCast.c (decorateType): fixed bug #522534

2002-02-23    <johan@balder>

	* src/SDCCdflow.c (computeDataFlow): fixed bug #460088

2002-02-22    <johan@balder>

	* src/SDCCast.c: fixed bug #514865

	* src/SDCCy.c ("SDCC.y"): fixed bug #516625

2002-02-21  Sandeep Dutta  <sandeep@ddi.com>

	* sdcc/src/SDCCloop.c:
	Previous fix was not good. basic blocks that have "break" or "return" are
	not really partof a loop , but live ranges used in these blocks should
	be live thru the entire loop, so set partOfLoop but don't add them to
	loop region

2002-02-21    <johan@FRIJA>

	* src/SDCCcse.c: fixed bug #514308

2002-02-20  Sandeep Dutta  <sandeep@ddi.com>

	* src/SDCCloop.c:
	Fixed BUG #519583. If a conditional block ended in a return/break
	statement inside a loop, it was not being considered part of the loop.

	* src/SDCCcflow.c: Removed fix (Fixed in SDCCloop.c)

2002-02-10  Karl Bongers <karl@turbobit.com>

	* debugger/*:
	Fixed up SDCDB debugger somewhat.  Updated debugger/README
	with lots of comments and notes.

	* device/examples/test2.c:
	Fix bug, "red" variable not being initialized(compiler complained).

	* device/examples/Makefile, examples/test3.c:
	Add Makefile in device/examples folder, compiles test3.c
	for use as a multiple module SDCDB test case.

	* sim/ucsim/cmd.src/cmdset.cc:
	Took out debug printfs in ucsim "next" command.

	* sim/ucsim/xa.src:
	Karl and Johan start ucsim XA support.  Most dissassembly working,
	about 75% emulation done(plenty of work remaining).

	* sim/ucsim/z80.src:
	Add Z80 support to ucsim, add test-ucz80 regression test,
	notice ucsim/z80 emulation fails on examples/test3.c/itoa code.